refactoring #4
workflow - maven